<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/kratos_log"
        android:alpha="0.5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:background="@color/colorPrimaryDarkTransparent">
        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress|textWebEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/phone_no_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/start_btn"
            android:text="@string/login_btn"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</RelativeLayout>